old/10.1.13.251/iptables.save
# Generated by iptables-save v1.4.21 on Thu Aug 18 19:08:37 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:52]
:neutron-filter-top - [0:0]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-local - [0:0]
:neutron-openvswi-scope - [0:0]
:neutron-openvswi-sg-chain - [0:0]
:neutron-openvswi-sg-fallback - [0:0]
:nova-api-FORWARD - [0:0]
:nova-api-INPUT - [0:0]
:nova-api-OUTPUT - [0:0]
:nova-api-local - [0:0]
:nova-filter-top - [0:0]
-A INPUT -j neutron-openvswi-INPUT
-A INPUT -j nova-api-INPUT
-A INPUT -s 10.1.10.211/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.10.211" -j ACCEPT
-A INPUT -s 10.1.10.212/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.10.212" -j ACCEPT
-A INPUT -s 10.1.10.213/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.10.213" -j ACCEPT
-A INPUT -s 10.1.10.214/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.10.214" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.10.251" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.251" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8042 -m comment --comment "001 aodh-api incoming aodh_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8777 -m comment --comment "001 ceilometer-api incoming ceilometer_api" -j ACCEPT
-A INPUT -s 10.1.10.211/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.10.211" -j ACCEPT
-A INPUT -s 10.1.10.212/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.10.212" -j ACCEPT
-A INPUT -s 10.1.10.213/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.10.213" -j ACCEPT
-A INPUT -s 10.1.10.214/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.10.214" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.14" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8776 -m comment --comment "001 cinder-api incoming cinder_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9292 -m comment --comment "001 glance incoming glance_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8041 -m comment --comment "001 gnocchi-api incoming gnocchi_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 443 -m comment --comment "001 horizon 443  incoming" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "001 horizon 80  incoming" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 5000,35357 -m comment --comment "001 keystone incoming keystone" -j ACCEPT
-A INPUT -s 10.1.10.211/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.10.211" -j ACCEPT
-A INPUT -s 10.1.10.212/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.10.212" -j ACCEPT
-A INPUT -s 10.1.10.213/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.10.213" -j ACCEPT
-A INPUT -s 10.1.10.214/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.10.214" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.10.251" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.251" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 27017 -m comment --comment "001 mongodb-server incoming mongodb_server" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "001 nagios incoming" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 5666 -m comment --comment "001 nagios-nrpe incoming nagios_nrpe" -j ACCEPT
-A INPUT -p udp -m multiport --dports 67 -m comment --comment "001 neutron dhcp in incoming neutron_dhcp_in_10.1.10.251" -j ACCEPT
-A INPUT -p udp -m multiport --dports 67 -m comment --comment "001 neutron dhcp in incoming neutron_dhcp_in_10.1.13.251" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9696 -m comment --comment "001 neutron server incoming neutron_server_10.1.10.251" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9696 -m comment --comment "001 neutron server incoming neutron_server_10.1.13.251" -j ACCEPT
-A INPUT -s 10.1.10.211/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.10.211" -j ACCEPT
-A INPUT -s 10.1.10.212/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.10.212" -j ACCEPT
-A INPUT -s 10.1.10.213/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.10.213" -j ACCEPT
-A INPUT -s 10.1.10.214/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.10.214" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.10.251" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.251_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.251_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.251_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.251_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.251_10.1.13.251" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8773,8774,8775 -m comment --comment "001 nova api incoming nova_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 6080 -m comment --comment "001 novncproxy incoming" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 6379 -m comment --comment "001 redis service incoming redis service from 10.1.10.251" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 6379 -m comment --comment "001 redis service incoming redis service from 10.1.13.251" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8080 -m comment --comment "001 swift proxy incoming swift_proxy" -j ACCEPT
-A INPUT -s 10.1.10.211/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.10.211" -j ACCEPT
-A INPUT -s 10.1.10.212/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.10.212" -j ACCEPT
-A INPUT -s 10.1.10.213/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.10.213" -j ACCEPT
-A INPUT -s 10.1.10.214/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.10.214" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.10.251" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.251" -j ACCEPT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-openvswi-FORWARD
-A FORWARD -j nova-filter-top
-A FORWARD -j nova-api-FORWARD
-A FORWARD -i br-ex -m comment --comment "000 forward in" -j ACCEPT
-A FORWARD -o br-ex -m comment --comment "000 forward out" -j ACCEPT
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-openvswi-OUTPUT
-A OUTPUT -j nova-filter-top
-A OUTPUT -j nova-api-OUTPUT
-A OUTPUT -p udp -m multiport --dports 68 -m comment --comment "001 neutron dhcp out outgoing neutron_dhcp_out_10.1.10.251" -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 68 -m comment --comment "001 neutron dhcp out outgoing neutron_dhcp_out_10.1.13.251" -j ACCEPT
-A neutron-filter-top -j neutron-openvswi-local
-A neutron-openvswi-FORWARD -j neutron-openvswi-scope
-A neutron-openvswi-sg-chain -j ACCEPT
-A neutron-openvswi-sg-fallback -m comment --comment "Default drop rule for unmatched traffic." -j DROP
-A nova-api-INPUT -d 10.1.13.251/32 -p tcp -m tcp --dport 8775 -j ACCEPT
-A nova-filter-top -j nova-api-local
COMMIT
# Completed on Thu Aug 18 19:08:37 2016
# Generated by iptables-save v1.4.21 on Thu Aug 18 19:08:37 2016
*nat
:PREROUTING ACCEPT [19:1915]
:INPUT ACCEPT [5:863]
:OUTPUT ACCEPT [560:34714]
:POSTROUTING ACCEPT [560:34714]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-float-snat - [0:0]
:neutron-openvswi-snat - [0:0]
:neutron-postrouting-bottom - [0:0]
:nova-api-OUTPUT - [0:0]
:nova-api-POSTROUTING - [0:0]
:nova-api-PREROUTING - [0:0]
:nova-api-float-snat - [0:0]
:nova-api-snat - [0:0]
:nova-postrouting-bottom - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A PREROUTING -j nova-api-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
-A OUTPUT -j nova-api-OUTPUT
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A POSTROUTING -j neutron-postrouting-bottom
-A POSTROUTING -j nova-api-POSTROUTING
-A POSTROUTING -s 172.24.4.224/28 -o em1 -m comment --comment "000 nat" -j MASQUERADE
-A POSTROUTING -j nova-postrouting-bottom
-A neutron-openvswi-snat -j neutron-openvswi-float-snat
-A neutron-postrouting-bottom -m comment --comment "Perform source NAT on outgoing traffic." -j neutron-openvswi-snat
-A nova-api-snat -j nova-api-float-snat
-A nova-postrouting-bottom -j nova-api-snat
COMMIT
# Completed on Thu Aug 18 19:08:37 2016
# Generated by iptables-save v1.4.21 on Thu Aug 18 19:08:37 2016
*mangle
:PREROUTING ACCEPT [87167:15378066]
:INPUT ACCEPT [87153:15377014]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [87266:15070597]
:POSTROUTING ACCEPT [87266:15070597]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-float-snat - [0:0]
:neutron-openvswi-floatingip - [0:0]
:neutron-openvswi-mark - [0:0]
:neutron-openvswi-scope - [0:0]
:nova-api-POSTROUTING - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A INPUT -j neutron-openvswi-INPUT
-A FORWARD -j neutron-openvswi-FORWARD
-A OUTPUT -j neutron-openvswi-OUTPUT
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A POSTROUTING -j nova-api-POSTROUTING
-A neutron-openvswi-PREROUTING -j neutron-openvswi-mark
-A neutron-openvswi-PREROUTING -j neutron-openvswi-scope
-A neutron-openvswi-PREROUTING -m connmark ! --mark 0x0/0xffff0000 -j CONNMARK --restore-mark --nfmask 0xffff0000 --ctmask 0xffff0000
-A neutron-openvswi-PREROUTING -j neutron-openvswi-floatingip
-A neutron-openvswi-float-snat -m connmark --mark 0x0/0xffff0000 -j CONNMARK --save-mark --nfmask 0xffff0000 --ctmask 0xffff0000
COMMIT
# Completed on Thu Aug 18 19:08:37 2016
# Generated by iptables-save v1.4.21 on Thu Aug 18 19:08:37 2016
*raw
:PREROUTING ACCEPT [25458068:3770415348]
:OUTPUT ACCEPT [25378996:3356076794]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
COMMIT
# Completed on Thu Aug 18 19:08:37 2016
